# cos429final

./: .gitignore  FINAL.md  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
app/: App.tsx  app.json  bun.lockb  package.json  tsconfig.json
data/asl_citizen/: use.txt
data/asl_citizen/key_to_ids/: ASL_Citizen_id_to_gloss_test.csv  ASL_Citizen_id_to_gloss_train.csv  ASL_Citizen_id_to_gloss_val.csv
data/pipeline/: model.py  test.json  train.json  val.json
data/pipeline/processing/: _asl_citizen_processing.py  _wlasl_processing.py  asl_citizen_processing.py  asl_citizen_processing_centered.py  asl_citizen_processing_disp.py  merge.py  stats.py  wlasl_processing.py  wlasl_processing_centered.py  wlasl_processing_disp.py
data/wlasl/: WLASL_id_to_gloss.csv  check_keypoints.py
data/wlasl/main/: cache.py  dataset.py  model.py  moe.py  rope.py  train.py  train.slurm  train2.py  trainer.py
data/wlasl/main/_code/: note.txt
data/wlasl/main/_code/I3D/: pytorch_i3d.py  test_i3d.py  train_i3d.py
data/wlasl/main/_code/I3D/datasets/: nslt_dataset.py  nslt_dataset_all.py
data/wlasl/main/_code/TGCN/: gen_features.py  sign_dataset.py  tgcn_model.py  train_tgcn.py  train_utils.py  utils.py  videotransforms.py
data/wlasl/main/start_kit/: data_reader.py  video_downloader.py
data/wlasl/wlasl/: adjust.py  check_keypoints.py
data/wlasl/wlasl/main/: cache.py  dataset.py  keypoints.py  model.py  model_backup.py  moe.py  train.py  train2.py  trainer.py
data/wlasl/wlasl/main/start_kit/: parser.py  preprocess.py
