[tool.poetry]
name = "asl-to-audio"
version = "1.0"
description = "Dependency manager for the A2A project"
authors = ["Ijay Narang, Windsor Nguyen, Caleb Shim"]
license = "Apache 2.0"
# homepage = ""
repository = "https://github.com/windsornguyen/cos429final"
keywords = ["computer-vision"]

[tool.poetry.dependencies]
python = ">=3.9"
ujson = "^5.9.0"
mediapipe = "0.10.9"
ffmpeg-python = "^0.2.0"
transformers = "^4.40.1"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
torch = "^2.3.0"
tabulate = "^0.9.0"
scikit-learn = "^1.4.2"
tensorboard = "^2.16.2"
torch-tb-profiler = "^0.4.3"
lightning = "^2.2.3"
seaborn = "^0.13.2"
gtts = "^2.5.1"
wheel = "^0.43.0"

[tool.poetry.dev-dependencies]
# See `ruff help` for more on Ruff's top-level commands.
ruff = "^0.3.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assuming Python 3.11+.
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# This is the (only) correct way to style strings (all my homies hate PEP 8)
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # Enforce double quotes for docstrings
inline-quotes = "single"     # Enforce single quotes for inline strings

[tool.ruff.format]
quote-style = "single"       # Default to single quotes for auto-formatting

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
